# git-branch-splitter

./: cli.py  github_client.py  main.py  pyproject.toml  utils.py
src/branch_splitter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/git_branch_splitter/: cli.py  main.py  models.py  utils.py
