[project]
name = "branch-splitter"
version = "0.1.0"
description = "CLI tool to split large PRs into chained branches by file groupings"
authors = [{ name = "Your Name", email = "your@email.com" }]
requires-python = ">=3.12"
dependencies = ["pygithub>=2.6.1", "pydantic>=2.10.6", "typer>=0.16.0"]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["git_branch_splitter"]

[project.scripts]
git-branch-splitter = "git_branch_splitter.cli:app"
